--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,7 @@ Authors@R: c(person("Colin", "Millar", role=c("aut","cre"), email="colin.millar@
              person("Niels", "Hintzen", role="ctb"),
              person("Josefine", "Egekvist", role="ctb"))
 Depends: R (>= 2.10)
-Imports: grDevices, tools, utils, knitr
-Suggests: icesAdvice
+Imports: knitr, ggplot2
 LazyData: yes
 Description: Functions to support the quallity control of fishery 
              VMS (vessel monitoring system) data.
