--- a/data-raw/config.json
+++ b/data-raw/config.json
@@ -1,5 +1,10 @@
 {
   // database connection string
-  "db_connection": "Driver={SQL Server};Server=SQL06;Database=VMS;Trusted_Connection=yes"
+  "rodbc_connection": "Driver={SQL Server};Server=SQL06;Database=VMS;Trusted_Connection=yes",
+  "odbc": {
+    "driver": "{SQL Server Native Client 11.0}",
+    "server": "SQL06",
+    "Trusted_Connection": "yes",
+    "database": "VMS"
+  }
 }
-
