--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(records_by_year)
 export(spatial_extent)
 export(spatialplot)
 export(theme_icesqc)
-import(dplyr)
 import(ggplot2)
 import(knitr)
+importFrom(dplyr,"%>%")
+importFrom(stats,aggregate)
+importFrom(stats,complete.cases)
